Working order form

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,6 +19,7 @@
             <div class="navbar-nav">
               <a class="nav-link" href="/home">Home</a>
               <a class="nav-link" href="/merch">Merch</a>
+                <a class="nav-link" href="/merch/order-summary">Order</a>
               <a class="nav-link" href="/account" >Account</a>
             </div>
           </div>
