--- a/templates/order_summary.html
+++ b/templates/order_summary.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>TateoMerch Home</title>
+    <title>Order</title>
   </head>
 
 <body>
@@ -44,7 +44,7 @@
         <tr>
             <th scope="row">{{ forloop.counter }}</th>
             <td>{{ item.item.item_name}}</td>
-            <td>{{ item.item.item_name}}</td>
+            <td>{{ item.item.item_brand}}{{ item.item.item_type}}{{ item.item.item_size}}</td>
             <td>
                 {{ item.item.item_number}}
             </td>
@@ -80,7 +80,7 @@
          <tr>
             <td colspan="5">
                 <a href="#" class="btn btn-warning float-right ml-2">Checkout</a>
-                <a href="/" class="btn btn-primary float-right">Continue Shopping</a>
+                <a href="/merch/orderform" class="btn btn-primary float-right">Continue Shopping</a>
             </td>
         </tr>
         {% endfor %}
