Updated models, order, orderhome implemented, updated urls, and views

--- a/templates/addHome.html
+++ b/templates/addHome.html
@@ -25,6 +25,7 @@
                       <a href="/add/merch" class="btn btn-primary">Add Merch</a>
                       <a href="/add/store" class="btn btn-primary">Add Store</a>
                       <a href="/add/EOW" class="btn btn-primary">Add EOW</a>
+                    <a href="/add/Item" class="btn btn-primary">Add Item</a>
                     </body>
               </div>
             </div>
