--- a/templates/home.html
+++ b/templates/home.html
@@ -18,6 +18,7 @@
 
 
 
+
   {% block content %}
 
             {% if latest_list %}
@@ -40,6 +41,12 @@
                             {% endfor %}
                              {% else %}
                             <p>No merch are available.</p>
+
+              <a class="nav-link" href="/home">Home</a>
+              <a class="nav-link" href="/merch">Merch</a>
+              <a class="nav-link" href="/merch/orderform">Order Form</a>
+              <a class="nav-link" href="/merch/order-summary">Order Summary</a>
+              <a class="nav-link" href="/account" >Account</a>
                             {% endif %}
 
 {% endblock content %}
