--- a/templates/order_form.html
+++ b/templates/order_form.html
@@ -9,6 +9,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>Order Form</title>
+
+      <script>
+    document.addEventListener("DOMContentLoaded", function (event) {
+        let scrollpos = sessionStorage.getItem('scrollpos');
+        if (scrollpos) {
+            var updatescroll = parseInt(scrollpos);
+            updatescroll = updatescroll + 235;
+            window.scrollTo(0, updatescroll);
+            sessionStorage.removeItem('scrollpos');
+        }
+    });
+
+    window.addEventListener("beforeunload", function (e) {
+        sessionStorage.setItem('scrollpos', window.scrollY);
+    });
+    </script>
   </head>
 
 <body>
@@ -16,6 +32,7 @@
 
 {% extends 'navbar.html' %}
 
+document.location.reload(true)
 
 {% block content %}
 
@@ -95,37 +112,6 @@
           aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-
-        <!-- Collapsible content -->
-        <div class="collapse navbar-collapse" id="basicExampleNav">
-
-          <!-- Links -->
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">All
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Shirts</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Sport wears</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Outwears</a>
-            </li>
-
-          </ul>
-          <!-- Links -->
-
-          <form class="form-inline">
-            <div class="md-form my-0">
-              <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            </div>
-          </form>
-        </div>
-        <!-- Collapsible content -->
 
       </nav>
       <!--/.Navbar-->
@@ -227,44 +213,57 @@
       </section>
       <!--Section: Products v.3-->
 
+{#      <!--Pagination-->#}
+{#      <nav class="d-flex justify-content-center wow fadeIn">#}
+{#        <ul class="pagination pg-blue">#}
+{##}
+{#          <!--Arrow left-->#}
+{#          <li class="page-item disabled">#}
+{#            <a class="page-link" href="#" aria-label="Previous">#}
+{#              <span aria-hidden="true">&laquo;</span>#}
+{#              <span class="sr-only">Previous</span>#}
+{#            </a>#}
+{#          </li>#}
+{##}
+{#          <li class="page-item active">#}
+{#            <a class="page-link" href="#">1#}
+{#            </a>#}
+{#          </li>#}
+{#          <li class="page-item">#}
+{#            <a class="page-link" href="#">2</a>#}
+{#          </li>#}
+{#          <li class="page-item">#}
+{#            <a class="page-link" href="#">3</a>#}
+{#          </li>#}
+{#          <li class="page-item">#}
+{#            <a class="page-link" href="#">4</a>#}
+{#          </li>#}
+{#          <li class="page-item">#}
+{#            <a class="page-link" href="#">5</a>#}
+{#          </li>#}
+{##}
+{#          <li class="page-item">#}
+{#            <a class="page-link" href="#" aria-label="Next">#}
+{#              <span aria-hidden="true">&raquo;</span>#}
+{#              <span class="sr-only">Next</span>#}
+{#            </a>#}
+{#          </li>#}
+{#        </ul>#}
+{#      </nav>#}
       <!--Pagination-->
-      <nav class="d-flex justify-content-center wow fadeIn">
-        <ul class="pagination pg-blue">
 
-          <!--Arrow left-->
-          <li class="page-item disabled">
-            <a class="page-link" href="#" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-              <span class="sr-only">Previous</span>
-            </a>
-          </li>
 
-          <li class="page-item active">
-            <a class="page-link" href="#">1
-            </a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">2</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">3</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">4</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">5</a>
-          </li>
 
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-              <span class="sr-only">Next</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-      <!--Pagination-->
+    <div class="mask rgba-black-strong d-flex justify-content-center align-items-center">
+
+
+        <tr>
+            <td colspan="5">
+                <a href="/merch/ordersummary" class="btn btn-primary float-right">Complete Order</a>
+            </td>
+        </tr>
+
+    </div>
 
     </div>
   </main>
