Updated production settings.py debug

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,7 +19,6 @@
 
           <div class=" navbar-collapse" id="navbarNavAltMarkup" >
             <div class="navbar-nav">
-              <a class="nav-link" href="/home">Home</a>
               <a class="nav-link" href="/merch">Merch</a>
               <a class="nav-link" href="/merch/orderform">Order Form</a>
               <a class="nav-link" href="/merch/order-summary">Order Summary</a>
@@ -34,7 +33,7 @@
         <div class="dropdown-menu dropdown-menu-end">
             <a class="dropdown-item" href="/account">Settings</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Logout</a>
+            <a class="dropdown-item" href="/logout">Logout</a>
         </div>
     </div>
     </nav>
