--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
@@ -20,8 +20,8 @@
           <div class=" navbar-collapse" id="navbarNavAltMarkup" >
             <div class="navbar-nav">
               <a class="nav-link" href="/merch">Merch</a>
-              <a class="nav-link" href="/merch/orderform">Order Form</a>
-              <a class="nav-link" href="/merch/order-summary">Order Summary</a>
+{#              <a class="nav-link" href="/merch/orderform">Order Form</a>#}
+{#              <a class="nav-link" href="/merch/order-summary">Order Summary</a>#}
             </div>
           </div>
         </div>
