--- a/templates/home.html
+++ b/templates/home.html
@@ -40,13 +40,12 @@
             </div>
                             {% endfor %}
                              {% else %}
-                            <p>No merch are available.</p>
 
               <a class="nav-link" href="/home">Home</a>
               <a class="nav-link" href="/merch">Merch</a>
               <a class="nav-link" href="/merch/orderform">Order Form</a>
               <a class="nav-link" href="/merch/order-summary">Order Summary</a>
-              <a class="nav-link" href="/account" >Account</a>
+              <a class="nav-link" href="/add" >Add</a>
                             {% endif %}
 
 {% endblock content %}
