Optional field on merch model & remove image from merch html page as it does not function correctly

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -32,7 +32,7 @@
                           {% endfor %}
                         </h6>
                     </div>
-                <img src= "{{ merch.upload.url }}" alt="{{ merch.store }}" width="300" height="500">
+{#                <img src= "{{ merch.upload.url }}" alt="{{ merch.store }}" width="300" height="500">#}
               </div>
       </div>
 
