route-review view added

--- a/templates/home.html
+++ b/templates/home.html
@@ -43,6 +43,7 @@
 
               <a class="nav-link" href="/home">Home</a>
               <a class="nav-link" href="/merch">Merch</a>
+                <a class="nav-link" href="/route-review">Route Review</a>
               <a class="nav-link" href="/merch/orderform">Order Form</a>
               <a class="nav-link" href="/merch/order-summary">Order Summary</a>
               <a class="nav-link" href="/add" >Add</a>
