--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -37,16 +37,19 @@
             </div>
         </div>
         {% else %}
-                        <button type="button" class="btn dropdown-toggle" data-bs-toggle='dropdown' aria-haspopup="true" aria-expanded="false">
-                    Account
-            </button>
-            <div class="dropdown-menu dropdown-menu-end">
-        <a class="nav-item nav-link" href="{% url 'login' %}">
-            Login
-        </a>
-        <a class="nav-item nav-link" href="{% url 'register' %}">
-            Register
-        </a>
+            <div class="btn-group" style="margin-right: 15px">
+                    <button type="button" class="btn dropdown-toggle" data-bs-toggle='dropdown' aria-haspopup="true" aria-expanded="false">
+                            Account
+                    </button>
+                <div class="dropdown-menu dropdown-menu-end">
+                    <a class="dropdown-item" href="{% url 'login' %}">
+                        Login
+                    </a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{% url 'register' %}">
+                        Register
+                    </a>
+                </div>
             </div>
         {% endif %}
     </nav>
