--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,13 +10,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
-
     <title>TateoMerch</title>
   </head>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="../home">TateoMerch</a>
-
           <div class=" navbar-collapse" id="navbarNavAltMarkup" >
             <div class="navbar-nav">
               <a class="nav-link" href="/merch">Merch</a>
@@ -24,9 +22,9 @@
 {#              <a class="nav-link" href="/merch/order-summary">Order Summary</a>#}
             </div>
           </div>
-        </div>
+
         {% if user.is_authenticated %}
-        <div class="btn-group" style="margin-right: 15px">
+        <div class="btn-group">
             <button type="button" class="btn dropdown-toggle" data-bs-toggle='dropdown' aria-haspopup="true" aria-expanded="false">
                     Account
             </button>
@@ -34,6 +32,7 @@
                 <a class="dropdown-item" href="/account">Settings</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="/logout">Logout</a>
+            </div>
             </div>
         </div>
         {% else %}
@@ -54,11 +53,8 @@
         {% endif %}
     </nav>
 
-                {% block content %}
+  {% block content %}
 
-
-              {% endblock content %}
-
-
+  {% endblock content %}
 
 </html>
