--- a/templates/home.html
+++ b/templates/home.html
@@ -56,7 +56,7 @@ figure:before {
 }
 
 .blank_row {
-    height: 520px; /* overwrites any other rules */
+    height: 700px; /* overwrites any other rules */
     background-color: #FFFFFF;
 }
 
@@ -77,52 +77,33 @@ figure:before {
                 <p style="font-weight: lighter">The right product in the right place at the right time</p>
             </div>
         </div>
-        <div class="d-flex justify-content-center" >
-        <table>
-            <tr class="blank_row">
+        <table class="blank_row">
 
-            </tr>
-          <tr>
-              <td>
-                <figure data-title="Product">
-                  <figcaption>
-                    Analyzes data to find the best product for the situation.
-                  </figcaption>
-                </figure>
-              </td>
-              <td>
-                <figure data-title="Price">
-                  <figcaption>
-                    Comprehensive sales data
-                  </figcaption>
-                </figure>
-              </td>
-              <td>
-                <figure data-title="Time">
-                  <figcaption>
-                    Our data tells us the best time to service our clients.
-                  </figcaption>
-                </figure>
-              </td>
-              <td>
-                <figure data-title="Quantity">
-                  <figcaption>
-                    Our data tells us how much product our clients need.
-                  </figcaption>
-                </figure>
-              </td>
-        </tr>
         </table>
-        </div>
-
-
-
-
-
-
-
-
-
+{#        <div class="d-flex justify-content-center" >#}
+{#          <div class="row">#}
+{#            <div class="col-sm-4 justify-content-center">#}
+{#                 <figure data-title="Product">#}
+{#                   <figcaption>#}
+{#                          Analyzes data to find the best product for the situation.#}
+{#                   </figcaption>#}
+{#                </figure>#}
+{#            </div>#}
+{#            <div class="col-sm-4">#}
+{#                 <figure data-title="Price">#}
+{#                    <figcaption>#}
+{#                        Comprehensive sales data#}
+{#                    </figcaption>#}
+{#                </figure>#}
+{#            </div>#}
+{#            <div class="col-sm-4">#}
+{#                <figure data-title="Time">#}
+{#                    <figcaption>#}
+{#                        Our data tells us the best time to service our clients.#}
+{#                    </figcaption>#}
+{#                </figure>#}
+{#            </div>#}
+{#        </div>#}
 
 
 
