--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="temp_css.css" rel="stylesheet">
 
     <title>Home</title>
 
@@ -71,10 +72,10 @@ figure:before {
         <div>
             <br>
             <div class="d-flex justify-content-center">
-                <h1 style="font-size: 75px; font-weight: lighter">TateoMerch</h1>
+                <h1 style="font-size: 75px; color: white; font-weight: lighter">TateoMerch</h1>
             </div>
             <div class="d-flex justify-content-center">
-                <p style="font-weight: lighter">The right product in the right place at the right time</p>
+                <p style="font-weight: lighter; color: white;">The right product in the right place at the right time</p>
             </div>
         </div>
         <table class="blank_row">
