--- a/templates/login.html
+++ b/templates/login.html
@@ -11,57 +11,68 @@
     <title>TateoMerch login</title>
   </head>
 
-<section class="vh-100 gradient-custom">
-  <div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-        <div class="card bg-dark text-white" style="border-radius: 1rem;">
-          <div class="card-body p-5 text-center">
+    <style>
+    .grad {
+    background-image: linear-gradient(#FDB99B,#CF8BF3,#A770EF); /*#2657eb*/
+    }
+    .blank_row {
+    height: 700px; /* overwrites any other rules */
+    background-color: #FFFFFF;
+    }
 
-            <div class="mb-md-5 mt-md-4 pb-5">
+  </style>
 
-              <h2 class="fw-bold mb-2 text-uppercase">TateoMerch</h2>
-              <p class="text-white-50 mb-5">Please enter your login and password!</p>
+  <body class="grad">
+    <section class="vh-100 gradient-custom">
+      <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+          <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+            <div class="card bg-dark text-white" style="border-radius: 1rem;">
+              <div class="card-body p-5 text-center">
 
-        <form method="post" action="{% url 'login' %}">
-          {% csrf_token %}
-          <table>
-            <tr>
-                <input type="text" class="form-control form-control-lg" placeholder = "Username" name="username"/>
-                <label class="form-label" for="typeEmailX">Username</label>
-            </tr>
-            <tr>
-                <input type="password" id="password" class="form-control form-control-lg" placeholder = "Password" name="password" />
-                 <label class="form-label" for="typePasswordX">Password</label>
+                <div class="mb-md-5 mt-md-4 pb-5">
 
-            </tr>
-          </table>
+                  <h2 style="font-weight: lighter; background: linear-gradient(to right, #FDB99B,#CF8BF3,#A770EF);
+            -webkit-text-fill-color: transparent;
+            -webkit-background-clip: text;
+                ">TateoMerch</h2>
 
-            <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
+                    <br>
 
-              <button class="btn btn-outline-light btn-lg px-5" value="{{ next }} type="submit">Login</button>
+            <form method="post" action="{% url 'login' %}">
+              {% csrf_token %}
+              <table>
+                <tr>
+                    <input type="text" class="form-control form-control-lg" placeholder = "Username" name="username"/>
+                    <label class="form-label" for="typeEmailX">Username</label>
+                </tr>
+                <tr>
+                    <input type="password" id="password" class="form-control form-control-lg" placeholder = "Password" name="password" />
+                     <label class="form-label" for="typePasswordX">Password</label>
 
-        </form>
+                </tr>
+              </table>
+
+{#                <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>#}
+                 <br>
+
+                  <button class="btn btn-outline-light btn-lg px-5 " value="{{ next }} type="submit">Login</button>
+
+            </form>
 
 
+                </div>
 
-              <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
-                <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
-                <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
+                <div>
+    {#              <p class="mb-0">Don't have an account? <a href="#!" class="text-white-50 fw-bold">Sign Up</a>#}
+    {#              </p>#}
+                </div>
+
               </div>
-
             </div>
-
-            <div>
-{#              <p class="mb-0">Don't have an account? <a href="#!" class="text-white-50 fw-bold">Sign Up</a>#}
-{#              </p>#}
-            </div>
-
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</section>
+    </section>
+  </body>
 </html>
