--- a/templates/merch-dashboard.html
+++ b/templates/merch-dashboard.html
@@ -16,10 +16,12 @@
   <style>
 .grad {
     background-image: linear-gradient(#FDB99B,#CF8BF3,#A770EF); /*#2657eb*/
+              background-repeat: no-repeat;
+  min-height: 1000px;
 }
 
 .blank_row {
-    height: 520px; /* overwrites any other rules */
+    height: 850px; /* overwrites any other rules */
     background-color: #FFFFFF;
 }
   </style>
@@ -29,13 +31,82 @@
     {% extends 'navbar.html' %}
 
     {% block content %}
-<p>HEllO</p>
-        <div>
-        hi
-        <p>hello
-        </p>
 
-        </div>
+<div style="display: flex; flex-direction: row; flex-wrap: wrap">
+
+
+
+            <div class="card " style="width: 30rem; margin: 10px">
+            <div class="card-header">Weekly</div>
+              <div class="card-body">
+                 {% if weekly %}
+                 {% for week in weekly %}
+
+                     <h6> <a href="/merch/weekly" class="">{{ week.date }} {{ week.user }}</a></h6>
+
+                  {% endfor %}
+                  {% else %}
+                    <p>No data available.</p>
+                  {% endif %}
+
+{#                    <a href="merch/data/" class="btn btn-primary">View more</a>#}
+              </div>
+            </div>
+
+            <div class="card " style="width: 30rem; margin: 10px">
+            <div class="card-header">Requests</div>
+              <div class="card-body">
+
+
+                       <p>{{ requests.Address }} {{ requests.City }}</p>
+                       <p>{{ requests.BS_Location }}</p>
+                       <p>{{ requests.Area }}</p>
+
+                    <p>No data available.</p>
+{#                <a href="merch/data/" class="btn btn-primary">View more</a>#}
+              </div>
+            </div>
+
+            <div class="card " style="width: 30rem; margin: 10px">
+            <div class="card-header">Route</div>
+              <div class="card-body">
+
+
+                       <p>{{ requests.Address }} {{ requests.City }}</p>
+                       <p>{{ requests.BS_Location }}</p>
+                       <p>{{ requests.Area }}</p>
+                        <p>No data available.</p>
+
+{#                <a href="merch/data/" class="btn btn-primary">View more</a>#}
+              </div>
+            </div>
+
+          <div class="card " style="width: 30rem; margin: 10px">
+            <div class="card-header">Route</div>
+              <div class="card-body">
+
+                 {% if stores %}
+                 {% for store in stores %}
+
+            <div class="card text-dark bg-light mb-3" style="width: 20rem; margin: 10px">
+            <div class="card-header">{{ store.name }} {{ store.number }}</div>
+              <div class="card-body">
+
+                    <a href="/merch/data/{{ user.id }}/{{ store.id }}" class="btn btn-success">View</a>
+                  <a href="/merch/create-merch/{{ store.id }}" class="btn btn-primary">Merch</a>
+{#                  <a href="merch/data/" class="btn btn-primary">Merch</a>#}
+
+              </div>
+            </div>
+                  {% endfor %}
+                  {% else %}
+                    <p>No data available.</p>
+                  {% endif %}
+
+              </div>
+          </div>
+
+</div>
 
     {% endblock content %}
 </body>
