--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,18 +6,36 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
+
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     <title>TateoMerch</title>
   </head>
+
+  <style>
+    .grad {
+    background-image: linear-gradient(#FDB99B,#CF8BF3,#A770EF); /*#2657eb*/
+    }
+    .blank_row {
+    height: 700px; /* overwrites any other rules */
+    background-color: #FFFFFF;
+    }
+
+  </style>
     <nav class="navbar navbar-expand navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="../home">TateoMerch</a>
+          <a class="navbar-brand" href="/home" style="
+           background: linear-gradient(to right, #FDB99B,#CF8BF3,#A770EF);
+            -webkit-text-fill-color: transparent;
+            -webkit-background-clip: text;
+                ">TateoMerch</a>
           <div class=" navbar-collapse" id="navbarNavAltMarkup" >
             <div class="navbar-nav">
-              <a class="nav-link" href="/merch">Merch</a>
+              <a class="nav-link" href="/merch/dashboard">Merch</a>
+              <a class="nav-link" href="/route-review">Route</a>
 {#              <a class="nav-link" href="/merch/orderform">Order Form</a>#}
 {#              <a class="nav-link" href="/merch/order-summary">Order Summary</a>#}
             </div>
