--- a/templates/merchuser.html
+++ b/templates/merchuser.html
@@ -10,6 +10,16 @@
 
     <title>Tateo Merch</title>
   </head>
+    <style>
+
+.grad {
+    background-image: linear-gradient(#FDB99B,#CF8BF3,#A770EF); /*#2657eb*/
+          background-repeat: no-repeat;
+  min-height: 1000px;
+}
+</style>
+
+  <body class="grad">
 
   {% extends 'navbar.html' %}
 
@@ -34,3 +44,5 @@
     </div>
 
 {% endblock content %}
+</body>
+</html>
