--- a/templates/merch-dashboard.html
+++ b/templates/merch-dashboard.html
@@ -28,7 +28,7 @@
 
 <body class="grad">
 
-    {% extends 'navbar.html' %}
+    {% extends 'dashboard-nav.html' %}
 
     {% block content %}
 
@@ -68,16 +68,11 @@
             </div>
 
             <div class="card " style="width: 30rem; margin: 10px">
-            <div class="card-header">Route</div>
+            <div class="card-header">Menu</div>
               <div class="card-body">
-
-
-                       <p>{{ requests.Address }} {{ requests.City }}</p>
-                       <p>{{ requests.BS_Location }}</p>
-                       <p>{{ requests.Area }}</p>
-                        <p>No data available.</p>
-
-{#                <a href="merch/data/" class="btn btn-primary">View more</a>#}
+                <a href="/merch/" class="btn btn-primary">View History</a>
+                  <a href="/merch/" class="btn btn-primary">View Reports</a>
+                  <a href="/add" class="btn btn-primary">Add</a>
               </div>
             </div>
 
@@ -88,15 +83,13 @@
                  {% if stores %}
                  {% for store in stores %}
 
-            <div class="card text-dark bg-light mb-3" style="width: 20rem; margin: 10px">
-            <div class="card-header">{{ store.name }} {{ store.number }}</div>
+            <h6 class="">{{ store.name }} {{ store.number }}</h6>
               <div class="card-body">
 
                     <a href="/merch/data/{{ user.id }}/{{ store.id }}" class="btn btn-success">View</a>
                   <a href="/merch/create-merch/{{ store.id }}" class="btn btn-primary">Merch</a>
 {#                  <a href="merch/data/" class="btn btn-primary">Merch</a>#}
 
-              </div>
             </div>
                   {% endfor %}
                   {% else %}
